// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> Compact story renders snapshot 1`] = `
<div
  class="dropdown dropdown--compact"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <label
    class="label u-is-vishidden"
    data-headlessui-state="open"
    id="headlessui-listbox-label-:rc:"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-:re:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:rc: headlessui-listbox-button-:rd:"
    class="dropdown-button dropdown-button--compact"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:rd:"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon dropdown-button__icon dropdown-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
  <ul
    aria-labelledby="headlessui-listbox-label-:rc:"
    aria-orientation="vertical"
    class="dropdown__options"
    data-headlessui-state="open"
    id="headlessui-listbox-options-:re:"
    role="listbox"
    tabindex="0"
  >
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:rf:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Dogs
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:rg:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Cats
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:rh:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Birds
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Dropdown /> CompactUsingChildrenPropAndNoVisibleLabel story renders snapshot 1`] = `
<div
  class="dropdown dropdown--compact"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <label
    class="label u-is-vishidden"
    data-headlessui-state="open"
    id="headlessui-listbox-label-:r1a:"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-:r1c:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:r1a: headlessui-listbox-button-:r1b:"
    class="dropdown-button dropdown-button--compact"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r1b:"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon dropdown-button__icon dropdown-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
  <ul
    aria-labelledby="headlessui-listbox-label-:r1a:"
    aria-orientation="vertical"
    class="dropdown__options"
    data-headlessui-state="open"
    id="headlessui-listbox-options-:r1c:"
    role="listbox"
    tabindex="0"
  >
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:r1d:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Dogs
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:r1e:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Cats
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:r1f:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Birds
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Dropdown /> CompactWithOptionsRightAligned story renders snapshot 1`] = `
<div
  class="dropdown dropdown--compact"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <label
    class="label u-is-vishidden"
    data-headlessui-state="open"
    id="headlessui-listbox-label-:ri:"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-:rk:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:ri: headlessui-listbox-button-:rj:"
    class="dropdown-button dropdown-button--compact"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:rj:"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon dropdown-button__icon dropdown-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
  <ul
    aria-labelledby="headlessui-listbox-label-:ri:"
    aria-orientation="vertical"
    class="dropdown__options dropdown__options--align-right"
    data-headlessui-state="open"
    id="headlessui-listbox-options-:rk:"
    role="listbox"
    tabindex="0"
  >
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:rl:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Dogs
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:rm:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Cats
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:rn:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Birds
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Dropdown /> Default story renders snapshot 1`] = `
<div
  class="dropdown dropdown--non-compact"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <label
    class="label"
    data-headlessui-state="open"
    id="headlessui-listbox-label-:r0:"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-:r2:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:r0: headlessui-listbox-button-:r1:"
    class="dropdown-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r1:"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon dropdown-button__icon dropdown-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
  <ul
    aria-labelledby="headlessui-listbox-label-:r0:"
    aria-orientation="vertical"
    class="dropdown__options dropdown__options--full-width"
    data-headlessui-state="open"
    id="headlessui-listbox-options-:r2:"
    role="listbox"
    tabindex="0"
  >
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:r3:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Dogs
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:r4:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Cats
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:r5:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Birds
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Dropdown /> DefaultWithoutVisibleLabel story renders snapshot 1`] = `
<div
  class="dropdown dropdown--non-compact"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <label
    class="label u-is-vishidden"
    data-headlessui-state="open"
    id="headlessui-listbox-label-:r6:"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-:r8:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:r6: headlessui-listbox-button-:r7:"
    class="dropdown-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r7:"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon dropdown-button__icon dropdown-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
  <ul
    aria-labelledby="headlessui-listbox-label-:r6:"
    aria-orientation="vertical"
    class="dropdown__options dropdown__options--full-width"
    data-headlessui-state="open"
    id="headlessui-listbox-options-:r8:"
    role="listbox"
    tabindex="0"
  >
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:r9:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Dogs
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:ra:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Cats
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:rb:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Birds
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Dropdown /> SeparateButtonAndMenuWidth story renders snapshot 1`] = `
<div
  class="dropdown dropdown--non-compact"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <label
    class="label u-is-vishidden"
    data-headlessui-state="open"
    id="headlessui-listbox-label-:ro:"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-:rq:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:ro: headlessui-listbox-button-:rp:"
    class="dropdown-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:rp:"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon dropdown-button__icon dropdown-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
  <ul
    aria-labelledby="headlessui-listbox-label-:ro:"
    aria-orientation="vertical"
    class="dropdown__options separate-button-and-menu-width"
    data-headlessui-state="open"
    id="headlessui-listbox-options-:rq:"
    role="listbox"
    tabindex="0"
  >
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:rr:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Dogs
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:rs:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Cats
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:rt:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Birds
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Dropdown /> UsingChildrenProp story renders snapshot 1`] = `
<div
  class="dropdown dropdown--non-compact"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <label
    class="label"
    data-headlessui-state="open"
    id="headlessui-listbox-label-:ru:"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-:r10:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:ru: headlessui-listbox-button-:rv:"
    class="dropdown-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:rv:"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon dropdown-button__icon dropdown-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
  <ul
    aria-labelledby="headlessui-listbox-label-:ru:"
    aria-orientation="vertical"
    class="dropdown__options dropdown__options--full-width"
    data-headlessui-state="open"
    id="headlessui-listbox-options-:r10:"
    role="listbox"
    tabindex="0"
  >
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:r11:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Dogs
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:r12:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Cats
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:r13:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Birds
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Dropdown /> UsingChildrenPropAndNoVisibleLabel story renders snapshot 1`] = `
<div
  class="dropdown dropdown--non-compact"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <label
    class="label u-is-vishidden"
    data-headlessui-state="open"
    id="headlessui-listbox-label-:r14:"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-:r16:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:r14: headlessui-listbox-button-:r15:"
    class="dropdown-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r15:"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon dropdown-button__icon dropdown-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
  <ul
    aria-labelledby="headlessui-listbox-label-:r14:"
    aria-orientation="vertical"
    class="dropdown__options dropdown__options--full-width"
    data-headlessui-state="open"
    id="headlessui-listbox-options-:r16:"
    role="listbox"
    tabindex="0"
  >
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:r17:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Dogs
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:r18:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Cats
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:r19:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Birds
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Dropdown /> UsingFunctionChildrenProp story renders snapshot 1`] = `
<div
  aria-label="Favorite Animal"
  class="dropdown dropdown--non-compact"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-:r1h:"
    aria-expanded="true"
    aria-haspopup="listbox"
    class="function-children__button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r1g:"
    type="button"
  >
    Select
    <svg
      aria-hidden="true"
      class="icon function-children__icon"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 18h2c.55 0 1-.45 1-1s-.45-1-1-1h-2c-.55 0-1 .45-1 1s.45 1 1 1zM3 7c0 .55.45 1 1 1h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1zm4 6h10c.55 0 1-.45 1-1s-.45-1-1-1H7c-.55 0-1 .45-1 1s.45 1 1 1z"
      />
    </svg>
  </button>
  <ul
    aria-labelledby="headlessui-listbox-button-:r1g:"
    aria-orientation="vertical"
    class="dropdown__options dropdown__options--full-width"
    data-headlessui-state="open"
    id="headlessui-listbox-options-:r1h:"
    role="listbox"
    tabindex="0"
  >
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:r1i:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Dogs
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:r1j:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Cats
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:r1k:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Birds
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Dropdown /> renders the OpenByDefault story 1`] = `
<div
  class="dropdown dropdown--non-compact"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <label
    class="label"
    data-headlessui-state="open"
    id="headlessui-listbox-label-:r1l:"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-:r1n:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:r1l: headlessui-listbox-button-:r1m:"
    class="dropdown-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r1m:"
    type="button"
  >
    <span>
      Cats
    </span>
    <svg
      aria-hidden="true"
      class="icon dropdown-button__icon dropdown-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
  <ul
    aria-activedescendant="headlessui-listbox-option-:r1s:"
    aria-labelledby="headlessui-listbox-label-:r1l:"
    aria-orientation="vertical"
    class="dropdown__options dropdown__options--full-width"
    data-headlessui-state="open"
    id="headlessui-listbox-options-:r1n:"
    role="listbox"
    tabindex="0"
  >
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:r1r:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Dogs
      </span>
    </li>
    <li
      aria-selected="true"
      class="dropdown__option dropdown__option--active dropdown__option--selected"
      data-headlessui-state="active selected"
      id="headlessui-listbox-option-:r1s:"
      role="option"
      tabindex="-1"
    >
      <span
        class="selected-icon__container"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="1.25rem"
          style="--icon-size: 1.25rem;"
          viewBox="0 0 24 24"
          width="1.25rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 16.17L5.53 12.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71c.39-.39.39-1.02 0-1.41-.39-.39-1.02-.39-1.41 0L9 16.17z"
          />
        </svg>
      </span>
      <span
        class="option__content"
      >
        Cats
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-:r1t:"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Birds
      </span>
    </li>
  </ul>
</div>
`;
